--- a/work16/index.css
+++ b/work16/index.css
@@ -1,10 +1,11 @@
-.box{
+.box {
     width: 350px;
     height: 350px;
     border: 1px solid #ccc;
     position: relative;
 }
-.big{
+
+.big {
     width: 400px;
     height: 400px;
     position: absolute;
@@ -14,22 +15,26 @@
     overflow: hidden;
     display: none;
 }
-.mask{
+
+.mask {
     width: 175px;
     height: 175px;
-    background: rgba(255, 255,0, 4);
+    background: rgba(255, 255,0,  .4);
     position: absolute;
     top: 0;
     left: 0;
     cursor: move;
-    display: none
+    display: none;
 }
-.small{
+
+.small {
     position: relative;
 }
-.box img{
-    vertical-align: top
+
+.box img {
+    vertical-align: top;
 }
-#bigBox img{
+
+#bigBox img {
     position: absolute;
 }
